--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="dark_background">#1D1D1D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_button_primary">#38cfcb</color>
     <color name="color_primary_variant">#FF3700B3</color>
