--- a/app/src/main/res/color/color_save_button.xml
+++ b/app/src/main/res/color/color_save_button.xml
@@ -4,10 +4,10 @@
     <!--When Button is not enabled -->
     <item android:state_enabled="false" android:color="#b6b7b5" />
     <!--When Button is in pressed state -->
-    <item android:state_pressed="true" android:color="#22a540" />
+    <item android:state_pressed="true" android:color="#0A511B" />
     <!--When Button is in selected state -->
-    <item android:state_selected="true" android:color="#14908C" />
+    <item android:state_selected="true" android:color="#176E2A" />
     <!--Default Background Color -->
-    <item android:color="#38cfcb" />
+    <item android:color="#22a540" />
 
 </selector>
