--- a/app/src/main/res/drawable/rounded_save_button.xml
+++ b/app/src/main/res/drawable/rounded_save_button.xml
@@ -1,7 +1,7 @@
 <!-- res/drawable/rounded_button.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Set the background color of the button -->
-    <solid android:color="#FF6200EE"/> <!-- Change this to your desired color -->
+    <solid android:color="@color/color_save_button"/> <!-- Change this to your desired color -->
 
     <!-- Set the corner radius -->
     <corners android:radius="5dp"/> <!-- Adjust this value for a different radius -->
@@ -9,5 +9,5 @@
     <!-- Optional: Add stroke to the button -->
     <stroke
         android:width="2dp"
-        android:color="#FF3700B3"/> <!-- Stroke color -->
+        android:color="@color/color_save_button"/> <!-- Stroke color -->
 </shape>
