--- a/app/src/main/res/drawable/rounded_danger_dialog.xml
+++ b/app/src/main/res/drawable/rounded_danger_dialog.xml
@@ -1,4 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<!-- res/drawable/rounded_button.xml -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Set the background color of the button -->
+    <solid android:color="@color/color_danger_alert"/> <!-- Change this to your desired color -->
+
+    <!-- Set the corner radius -->
+    <corners android:radius="5dp"/> <!-- Adjust this value for a different radius -->
+
+    <!-- Optional: Add stroke to the button -->
+    <stroke
+        android:width="2dp"
+        android:color="@color/color_danger_alert"/> <!-- Stroke color -->
+</shape>
