--- a/app/src/main/res/layout/danger_alert_dialog.xml
+++ b/app/src/main/res/layout/danger_alert_dialog.xml
@@ -1,6 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    app:backgroundTint="@null"
+    android:background="@drawable/rounded_danger_dialog"
+    android:padding="8dp"
+    android:visibility="visible"
+    android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/danger_circle_black"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Danger Alert"
+        android:textSize="12sp"
+        android:id="@+id/AlertTitle"
+        android:textColor="@color/black"
+        android:layout_gravity="center_vertical"/>
+</LinearLayout>
