--- a/app/src/main/res/layout/activity_main_receiver.xml
+++ b/app/src/main/res/layout/activity_main_receiver.xml
@@ -7,21 +7,8 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-
-   <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#252526"
-    android:orientation="vertical"
-    android:gravity="center">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text="Landing page...." />
-
-</LinearLayout>
-
+        android:text="Receiver"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
