--- a/app/src/main/res/layout/activity_main_monitor.xml
+++ b/app/src/main/res/layout/activity_main_monitor.xml
@@ -1,45 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#252526"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="top"
+        android:fitsSystemWindows="true"
         android:orientation="vertical"
-        android:gravity="center">
+        android:background="#252526"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Kanda Kuri button Utangire ucunge umuriro" />
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:gravity="end">
 
-        <!--   <Button-->
-        <!--       android:id="@+id/start_checking_power"-->
-        <!--       android:layout_width="wrap_content"-->
-        <!--       android:layout_marginTop="10dp"-->
-        <!--       android:layout_height="wrap_content"-->
-        <!--       android:textColor="@color/white"-->
-        <!--       android:background="@color/color_primary"-->
-        <!--       android:text="Tangira gucunga" />-->
-        <!--Switch with default state as enabled-->
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/buttonSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:textColor="@color/white"
-            android:text="Gucunga Umuriro"
-            android:textAlignment="center"
-            android:textSize="24sp" />
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Settings"
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+                android:gravity="end"
+                android:src="@drawable/cog_small_white"
+                android:background="@drawable/rounded_button"
+                android:backgroundTint="@null"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:id="@+id/applicationSettingsButton"
+                android:layout_gravity="start"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Kanda Kuri button Utangire ucunge umuriro" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/buttonSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:textColor="@color/white"
+                android:text="Gucunga Umuriro"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+        </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.constraintlayout.widget.ConstraintLayout>
