--- a/app/src/main/res/layout/activity_main_monitor.xml
+++ b/app/src/main/res/layout/activity_main_monitor.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/main"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
@@ -18,28 +19,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            android:gravity="end">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="Settings"
+    <View
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:visibility="invisible" />
 
-                android:gravity="end"
-                android:src="@drawable/cog_small_white"
-                android:background="@drawable/rounded_button"
-                android:backgroundTint="@null"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:id="@+id/applicationSettingsButton"
-                android:layout_gravity="start"/>
+    <TextView
+        android:id="@+id/settingsTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="start"
+        android:paddingVertical="8dp"
+        android:text="Ahabanza"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-        </LinearLayout>
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/applicationSettingsButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="@null"
+        android:contentDescription="Settings"
+        android:padding="10dp"
+        android:src="@drawable/cog_small_white"
+        android:textColor="@color/black" />
+
+</LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
